# WinHttpWebSocketClient

./: CMakeLists.txt  README.md  example.cpp  websocket.cpp  websocket.h
docs/: OpenCertificateByName.md  PrintLastError.md
docs/WebSocketClient/: Close.md  Connect.md  ErrorBufferLength.md  ErrorCode.md  ErrorDescription.md  Free.md  Initialize.md  QueryCloseStatus.md  Receive.md  Send.md
